[feature] migrate to using hundred dao contracts

--- a/components/projectCard/projectCard.module.css
+++ b/components/projectCard/projectCard.module.css
@@ -24,6 +24,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 
 @media screen and (max-width: 1440px) {
