--- a/pages/project/[project]/project.module.css
+++ b/pages/project/[project]/project.module.css
@@ -1,23 +1,29 @@
 .projectContainer {
-  width: 100;
+  width: 100%;
   padding: 0 36px;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-gap: 36px;
+}
+
+.ChartContainer {
+  padding: 36px;
+  display: grid;
+  grid-template-rows: 6% 94%;
 }
 
 .projectCardContainer {
   padding: 0 36px;
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 48px;
   box-sizing: border-box;
 }
 
 .fakeGrid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 48px;
-  box-sizing: border-box;
-  height: max-content;
+  width: 100%;
+  padding: 0 36px;
 }
 
 .accountButton {
