[feature] add more info to boost calculator

--- a/components/boostCalculator/boostCalculator.module.css
+++ b/components/boostCalculator/boostCalculator.module.css
@@ -8,6 +8,12 @@
   padding: 12px 0px
 }
 
+.boost {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 12px 0px;
+}
+
 .inputTitleContainer {
   width: 100%;
   display: flex;
