--- a/components/gaugeVoting/gaugeVoting.module.css
+++ b/components/gaugeVoting/gaugeVoting.module.css
@@ -47,9 +47,7 @@
 }
 
 .calculationResult {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  text-align: end;
 }
 
 .vote_line {
@@ -58,6 +56,7 @@
   grid-template-columns: 80% 18%;
   grid-gap: 2%;
   align-items: center;
+  margin-bottom: 2%;
 }
 
 .bold {
