--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -13,6 +13,13 @@
   min-height: 40px;
 }
 
+.accountImage {
+  height: 30px;
+  width: 30px;
+  border-radius: 100px;
+  margin-right: 8px;
+}
+
 .accountIcon {
   width: 30px;
   height: 30px;
